--- a/package.json
+++ b/package.json
@@ -2,14 +2,26 @@
   "name": "rspackify",
   "version": "0.0.2",
   "description": "Seamlessly switch from Webpack to Rspack on the fly",
+  "scripts": {
+    "dev": "rspack serve",
+    "build": "rspack build"
+  },
   "dependencies": {
     "@rspack/core": "^0.3.14",
     "@rspack/dev-server": "^0.3.14",
     "@rspack/plugin-html": "^0.3.14",
     "arg": "^5.0.2",
-    "debug": "^4.3.4"
+    "debug": "^4.3.4",
+    "diff": "^5.1.0",
+    "diff2html": "^3.4.45",
+    "html-escaper": "^3.0.3",
+    "lodash": "^4.17.21",
+    "opener": "^1.5.2"
   },
   "devDependencies": {
+    "@rspack/cli": "^0.3.14",
+    "@types/debug": "^4.1.12",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.9.0",
     "html-webpack-plugin": "^5.5.3",
     "webpack-dev-server": "^4.15.1"
