chore: use pnpm

--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
   "bugs": {
     "url": "https://github.com/SyMind/rspackify/issues"
   },
-  "homepage": "https://github.com/SyMind/rspackify#readme"
+  "homepage": "https://github.com/SyMind/rspackify#readme",
+  "packageManager": "pnpm@8.15.1+sha256.245fe901f8e7fa8782d7f17d32b6a83995e2ae03984cb5b62b8949bfdc27c7b5"
 }
