feat: redirect nextjs webpack plugins and loaders

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "@rspack/core": "1.0.0-alpha.0",
     "@rspack/dev-server": "1.0.0-alpha.0",
     "@rspack/plugin-html": "0.5.8",
+    "@rspack/plugin-react-refresh": "^0.7.5",
     "arg": "^5.0.2",
     "debug": "^4.3.4",
     "diff": "^5.1.0",
     "diff2html": "^3.4.45",
     "html-escaper": "^3.0.3",
     "lodash": "^4.17.21",
-    "opener": "^1.5.2"
+    "opener": "^1.5.2",
+    "react-refresh": "^0.14.2"
   },
   "devDependencies": {
     "@rspack/cli": "1.0.0-alpha.0",
@@ -24,6 +26,7 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.9.0",
     "html-webpack-plugin": "^5.5.3",
+    "webpack": "^5.92.1",
     "webpack-dev-server": "^4.15.1"
   },
   "bin": {
