--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "rspackify": "bin.js"
   },
   "files": [
-    "dist"
+    "bin.js",
+    "dist",
+    "public"
   ],
   "repository": {
     "type": "git",
