--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "diff2html": "^3.4.45",
     "html-escaper": "^3.0.3",
     "lodash": "^4.17.21",
-    "opener": "^1.5.2"
+    "opener": "^1.5.2",
+    "rspack-manifest-plugin": "^5.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.45.1",
