--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "@aaroon/workbox-rspack-plugin": "^0.3.1",
     "@rspack/core": "1.0.0-alpha.1",
     "@rspack/dev-server": "1.0.0-alpha.1",
     "@rspack/plugin-react-refresh": "1.0.0-alpha.1",
