feat: support umijs

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,13 @@ dist
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+
+/.env.local
+/.umirc.local.ts
+/config/config.local.ts
+/src/.umi
+/src/.umi-production
+/src/.umi-test
+/dist
+.swc
+
