feat: use rspack 1.0

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@aaroon/workbox-rspack-plugin": "^0.3.1",
-    "@rspack/core": "1.0.0-alpha.1",
-    "@rspack/dev-server": "1.0.0-alpha.1",
+    "@rspack/core": "1.0.0",
+    "@rspack/dev-server": "1.0.0",
     "@rspack/plugin-react-refresh": "1.0.0-alpha.1",
     "debug": "^4.3.4",
     "diff": "^5.1.0",
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.45.1",
-    "@rspack/cli": "1.0.0-alpha.1",
+    "@rspack/cli": "1.0.0",
     "@types/debug": "^4.1.12",
     "@types/html-escaper": "^3.0.2",
     "@types/lodash": "^4.14.202",
