fix: rspack dev server version

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@aaroon/workbox-rspack-plugin": "^0.3.1",
     "@rspack/core": "1.0.0",
     "@rspack/dev-server": "1.0.0",
-    "@rspack/dev-server-v4": "npm:@rspack/dev-server@v1.0.0-beta.0",
-    "@rspack/plugin-react-refresh": "1.0.0-alpha.1",
+    "@rspack/dev-server-v4": "npm:@rspack/dev-server@v1.0.0-alpha.1",
+    "@rspack/plugin-react-refresh": "1.0.0-alpha.0",
     "debug": "^4.3.4",
     "diff": "^5.1.0",
     "diff2html": "^3.4.45",
