--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rspack/dev-server": "1.0.0",
     "@rspack/dev-server-v4": "npm:@rspack/dev-server@v1.0.0-alpha.1",
     "@rspack/plugin-react-refresh": "1.0.0-alpha.0",
+    "chalk": "^4.1.2",
     "debug": "^4.3.4",
     "diff": "^5.1.0",
     "diff2html": "^3.4.45",
